modify the readme file